--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NutriRep</title>
+    <link rel=""stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+        <h1>NutriRep</h1>
+        <nav>
+            <ul>
+                <li><a href="registration.html">Register</a></li>
+                <li><a href="login.html"></a></li>
+            </ul>
+        </nav>
+    </div>
     
 </body>
 </html>
