Added Login Page, Added Go back button on Register and Login Page

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>NutriRep</h1>
         <nav>
             <ul>
-                <li><a href="registration.html">Register</a></li>
-                <li><a href="login.html"></a></li>
+                <li><a href="registration.html">Register Here</a></li>
+                <li><a href="login.html">Login Here</a></li>
             </ul>
         </nav>
     </div>
