--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+        <div class="container">
+        <h1>NutriRep</h1>
+        <nav>
+            <ul>
+                <li><a href="registration.html">Register Here</a></li>
+                <li><a href="login.html">Login Here</a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
