fixed href to RegPage

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>NutriRep</h1>
         <nav>
             <ul>
-                <li><a href="registration.html">Register Here</a></li>
+                <li><a href="RegPage.html">Register Here</a></li>
                 <li><a href="login.html">Login Here</a></li>
             </ul>
         </nav>
