--- a/LoginPage.html
+++ b/LoginPage.html
@@ -8,6 +8,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <section>
+            <h2>Login</h2>
+           
+            <form action="#" method="POST">
+                <b>Please Enter Your Email or Username, and your password</b>
+                <br>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+                <b>
+                    OR
+                </b>
+                <br>
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" required>
+                <br>
+                <br>
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
+                <br>
+                <button type="submit">Login</button>
+            </form>
+        </section>
+        <nav>
+            <ul>
+                <li><a href="index.html">Go Home</a></li>
+            </ul>
+        </nav>
+    </main>
 </body>
 </html>
