--- a/RegPage.html
+++ b/RegPage.html
@@ -40,6 +40,11 @@
                 <button type="submit">Register</button>
             </form>
         </section>
+        <nav>
+            <ul>
+                <li><a href="index.html">Go Home</a></li>
+            </ul>
+        </nav>
     </main>
 
     <footer>
