updates to reg page js including proper caching with JSON

--- a/RegPage.html
+++ b/RegPage.html
@@ -38,7 +38,7 @@
                     <option value="other">Other</option>
                 </select>
 
-                <button type="submit" id="register" onclick="validateRegForm()">Register</button>
+                <button id="register" onclick="validateRegForm()">Register</button>
             </form>
         </section>
         <h2 id="userMessage" visibility="hidden"></h2>
