Update index.html and css

--- a/index.html
+++ b/index.html
@@ -3,19 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NutriRep</title>
+    <title>NutriRep | Home</title>
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="banner">
+        <img src="images/banner.jpg" alt="NutriRep Banner">
+
+    </div>
     <div class="container">
         <h1>NutriRep</h1>
+        <p>Health and Nutrition at your fingertips</p>
         <nav>
             <ul>
                 <li><a href="RegPage.html">Register Here</a></li>
                 <li><a href="LoginPage.html">Login Here</a></li>
+                <li><a href="User.html">My Profile</a></li>
+                <li><a href="MealRec.html">Meal Recommendations</a></li>
+                <li><a href="History.html">History</a></li>
             </ul>
         </nav>
     </div>
+
+    <main>
+        <section>
+            <h2>Welcome to NutriRep</h2>
+            <p>
+                NutriRep will help you take control of your health and understand how your lifestyle can affect your well-being. You will be able to track and monitor your nutrition, and receive health recipe recommendations tailored to your nutritional needs.
+
+            </p> 
+            <p>
+                Whether you are a weight- watcher, managing a chronic condition or trying to eat healthy on your own or with your family, NutriRep will give you tools you need to succeed. 
+
+            </p> 
+        </section>
+
+        
+        <section>
+            <h3>Your Health, Made Simple</h3>
+            <ul>
+                <li>Create custom meal plans</li>
+                <li>Track your progress</li>
+                <li>Receice daily reminders to stay on track</li>
+            </ul>
+        </section>
+
+            <section>
+            <h3>Get Started</h3>
+            <p>
+                <a href="RegPage.html">Register</a> for a new account or <a href="LoginPage.html">Log in</a> if you already have an account.
+            </p>
+        </section>
+
+    </main>
+   <footer>
+    <p>&copy; 2025 NutriRep. All rights reserved</p>
+   </footer> 
 </body>
 </html>
