--- a/LoginPage.html
+++ b/LoginPage.html
@@ -14,23 +14,23 @@
            <!--create login function that runs when login is clicked-->
            <!--function will check if username or email have a value that matches with a user object-->
            <!--function will verify that matching user object pass == password value-->
-            <form action="#" method="POST"><!--get rid of action and method-->
+            <form name="loginForm">
                 <b>Please Enter Your Email or Username, and your password</b>
                 <br>
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email">
                 <b>
                     OR
                 </b>
                 <br>
                 <label for="username">Username</label>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" name="username">
                 <br>
                 <br>
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
                 <br>
-                <button type="submit">Login</button><!--remove type add event listener-->
+                <button id ='loginButton'>Login</button>
             </form>
         </section>
         <nav>
