styling tweaks for welcome message and hiding login form for logged in users.

--- a/LoginPage.html
+++ b/LoginPage.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <main>
-        <section>
+        <section id="loginForm">
             <h2>Login</h2>
            <!--create login function that runs when login is clicked-->
            <!--function will check if username or email have a value that matches with a user object-->
            <!--function will verify that matching user object pass == password value-->
-            <form name="loginForm">
+            <form name="loginForm" >
                 <b>Please Enter Your Email or Username, and your password</b>
                 <br>
                 <label for="email">Email</label>
