--- a/RegPage.html
+++ b/RegPage.html
@@ -12,7 +12,7 @@
         <main>
         <section id="registration-form" class="registration-form">
             <h2>Create Your Account</h2>
-            <form action="#" name="registration-form" method="POST">
+            <form name="registration-form">
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" required>
 
