Updated homepage banner and css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="banner">
-        <img src="images/banner.jpg" alt="NutriRep Banner">
+    <header class="banner">
+        <img src="images/banner.jpg.jpg" alt="NutriRep Banner">
+        </header>
 
     </div>
     <div class="container">
