Added Profiles to User.hmtl

--- a/User.html
+++ b/User.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!--Profiles-->
+       <div class="profile-type">
+        <h3>Select Your Profile:</h3>
+        <button type="button" data-profile="weight-watchers">Weight Watchers</button>
+        <button type="button" data-profile="family">Family Focused</button>
+        <button type="button" data-profile="chronic">Managing Chronic Conditions</button>
+        <button type="button" data-profile="low-vitamin">Low Vitamin</button>
+        <button type="button" data-profile="high-calorie">High Calorie</button>
+
+       </div>
     
 </body>
 </html>
