--- a/MealRec.html
+++ b/MealRec.html
@@ -235,7 +235,7 @@
 <!-- CTA Section -->
 <section class="cta">
     <p>Want more meals tailored to your nutritional needs?</p>
-    <a href="RegPage.html">Create Your Profile</a>
+    <a id="reg" href="RegPage.html">Create Your Profile</a>
     <a href="index.html">Go Home</a>
 </section>
 
