modifications to template for mealRec and creation of mealPlan class and constructor

--- a/MealRec.html
+++ b/MealRec.html
@@ -18,8 +18,9 @@
     <div class="meal-card">
         <img src="images/Salmon-1.jpg" alt="Baked Salmon">
         <h3>Baked Salmon with Quinoa and Broccoli</h3>
-        <p>Calories: 400 kcal | Protein: 35g | Fat: 20g</p>
+        <span>Calories:</span> <span id="calories">400</span><span>kcal | Protein: </span><span id="protein">35</span><span>g | Fat: </span><span id="fat">20</span><span>g</span>
         <p>Why this meal? You're low on Vitamin D.</p>
+        <input type="date" id="date"> <button id="planMeal">Add Meal</button>
     </div>
 
     <div class="meal-card">
