--- a/MealRec.html
+++ b/MealRec.html
@@ -17,7 +17,7 @@
     <p>Based on your current intake and nutrition targets.</p>
     <div class="meal-card">
         <img src="images/Salmon-1.jpg" alt="Baked Salmon">
-        <h3>Baked Salmon with Quinoa and Broccoli</h3>
+        <h3 id="mealName">Baked Salmon with Quinoa and Broccoli</h3>
         <span>Calories:</span> <span id="calories">400</span><span>kcal | Protein: </span><span id="protein">35</span><span>g | Fat: </span><span id="fat">20</span><span>g</span>
         <p>Why this meal? You're low on Vitamin D.</p>
         <input type="date" id="date"> <button id="planMeal">Add Meal</button>
