simple welcome message on history page

--- a/History.html
+++ b/History.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <section>
+            <h2>Your Meal History</h2>
+            <p>
+                Welcome to your meal history page.
+            </p>
+        </section>
+    </main>
 </body>
 </html>
