Added Want Meal, and Ate Meal Button on MealRec

--- a/MealRec.html
+++ b/MealRec.html
@@ -20,7 +20,9 @@
         <h3 id="mealName">Baked Salmon with Quinoa and Broccoli</h3>
         <span>Calories:</span> <span id="calories">400</span><span>kcal | Protein: </span><span id="protein">35</span><span>g | Fat: </span><span id="fat">20</span><span>g</span>
         <p>Why this meal? You're low on Vitamin D.</p>
-        <input type="date" id="date"> <button id="planMeal">Add Meal</button>
+        <input type="date" id="date"> <button id="planMeal1">I Want To Eat This Meal</button>
+        <br>
+        <input type="date" id="date"> <button id="ateMeal1">I Ate This Meal</button>
     </div>
 
     <div class="meal-card">
@@ -28,6 +30,9 @@
         <h3>Tuna Salad Sandwich on Whole Wheat Bread </h3>
         <p>Calories: 253 Kcal | Protein: 27g | Fat:20g </p>
         <p>Why this meal? High Calorie Lunch</p>
+        <input type="date" id="date"> <button id="planMeal2">I Want To Eat This Meal</button>
+        <br>
+        <input type="date" id="date"> <button id="ateMeal2">I Ate This Meal</button>
     </div>
 </section>
 
@@ -49,12 +54,18 @@
                 <img src="images/AvocadoToastwithEgg.jpg" alt="Avocado Toast with Eggs">
                 <div class="meal-info">
                     <div class="meal-title">Avocado Toast with Eggs</div>
+                    <input type="date" id="date"> <button id="planMeal3">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal3">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/berry cottage cheese breakfast bowl.jpeg" alt="Berry Cottage Cheese Breakfast Bowl">
                 <div class="meal-info">
                     <div class="meal-title">Berry Cottage Cheese Breakfast Bowl</div>
+                    <input type="date" id="date"> <button id="planMeal4">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal4">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -69,12 +80,18 @@
                 <img src="images/grilled-chicken-salad-.jpg" alt="Grilled Chicken Salad">
                 <div class="meal-info">
                     <div class="meal-title">Grilled Chicken Salad</div>
+                    <input type="date" id="date"> <button id="planMeal5">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal5">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/Buffalo chicken rice bowls.jpeg" alt="Buffalo Chicken Rice Bowls">
                 <div class="meal-info">
                     <div class="meal-title">Buffalo Chicken Rice Bowls</div>
+                    <input type="date" id="date"> <button id="planMeal6">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal6">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -89,12 +106,18 @@
                 <img src="images/salmon-caesar-small-1.jpg" alt="Salmon Caesar Salad">
                 <div class="meal-info">
                     <div class="meal-title">Salmon Caesar Salad</div>
+                    <input type="date" id="date"> <button id="planMeal7">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal7">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/crock pot chicken tacos.jpeg" alt="Crock Pot Chicken Tacos">
                 <div class="meal-info">
                     <div class="meal-title">Crock Pot Chicken Tacos</div>
+                    <input type="date" id="date"> <button id="planMeal8">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal8">I Ate This Meal</button>
                 </div>
             </div>
         </div>
