Added Ate and Want button to all meals

--- a/MealRec.html
+++ b/MealRec.html
@@ -137,12 +137,18 @@
                 <img src="images/scrambled eggs with spinach and toast.jpeg" alt="Scrambled Eggs with Spinach">
                 <div class="meal-info">
                     <div class="meal-title">Scrambled Eggs with Spinach and Toast</div>
+                    <input type="date" id="date"> <button id="planMeal10">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal10">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/overnight oats.jpeg" alt="Overnight Oats">
                 <div class="meal-info">
                     <div class="meal-title">Overnight Oats with Berries and Nuts</div>
+                    <input type="date" id="date"> <button id="planMeal11">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal11">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -157,12 +163,18 @@
                 <img src="images/lentil soup.jpeg" alt="Lentil Soup">
                 <div class="meal-info">
                     <div class="meal-title">Lentil Soup with Whole Grain Bread</div>
+                    <input type="date" id="date"> <button id="planMeal12">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal12">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/grilled-chicken-salad-.jpg" alt="Grilled Chicken Salad">
                 <div class="meal-info">
                     <div class="meal-title">Grilled Chicken Salad</div>
+                    <input type="date" id="date"> <button id="planMeal13">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal13">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -177,12 +189,18 @@
                 <img src="images/baked salmon with veg.webp" alt="Baked Salmon">
                 <div class="meal-info">
                     <div class="meal-title">Baked Salmon with Roasted Vegetables</div>
+                    <input type="date" id="date"> <button id="planMeal14">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal14">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/chicken stir fry.jpeg" alt="Chicken Stir-Fry">
                 <div class="meal-info">
                     <div class="meal-title">Chicken Stir-Fry with Brown Rice</div>
+                    <input type="date" id="date"> <button id="planMeal15">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal15">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -203,12 +221,18 @@
                 <img src="images/yogurt and fruit parfaits.jpeg" alt="Yogurt Parfait">
                 <div class="meal-info">
                     <div class="meal-title">Yogurt and Fruit Parfaits</div>
+                    <input type="date" id="date"> <button id="planMeal16">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal16">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/Loaded Avocado.jpeg" alt="Avocado Toast">
                 <div class="meal-info">
                     <div class="meal-title">Loaded Avocado Toast</div>
+                    <input type="date" id="date"> <button id="planMeal17">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal17">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -223,12 +247,18 @@
                 <img src="images/veggie q.jpeg" alt="Veggie Quesadillas">
                 <div class="meal-info">
                     <div class="meal-title">Veggie Quesadillas</div>
+                    <input type="date" id="date"> <button id="planMeal18">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal18">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/italian pasta salad.jpeg" alt="Italian Pasta Salad">
                 <div class="meal-info">
                     <div class="meal-title">Italian Pasta Salad</div>
+                    <input type="date" id="date"> <button id="planMeal19">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal19">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -243,12 +273,18 @@
                 <img src="images/slow cooker.jpeg" alt="Beef and Broccoli">
                 <div class="meal-info">
                     <div class="meal-title">Slow Cooker Beef and Broccoli</div>
+                    <input type="date" id="date"> <button id="planMeal20">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal20">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/one pot.jpeg" alt="One Pot Chicken and Rice">
                 <div class="meal-info">
                     <div class="meal-title">One-Pot Chicken and Rice</div>
+                    <input type="date" id="date"> <button id="planMeal21">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date"> <button id="ateMeal21">I Ate This Meal</button>
                 </div>
             </div>
         </div>
