Minor tweak History and MealRec

--- a/History.html
+++ b/History.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <section>
+            <h2>Your Meal History</h2>
+            <p>
+                Welcome to your meal history page. Here you can see your previous week of meals.
+            </p>
+        </section>
+        <section>
+            <h3>Meals The Past Week Were:</h3>
+            <p></p>
+        </section>
+    </main>
 </body>
 </html>
