--- a/MealRec.html
+++ b/MealRec.html
@@ -20,9 +20,9 @@
         <h3 id="mealName">Baked Salmon with Quinoa and Broccoli</h3>
         <span>Calories:</span> <span id="calories">400</span><span>kcal | Protein: </span><span id="protein">35</span><span>g | Fat: </span><span id="fat">20</span><span>g</span>
         <p>Why this meal? You're low on Vitamin D.</p>
-        <input type="date" id="date"> <button id="planMeal1">I Want To Eat This Meal</button>
+        <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
         <br>
-        <input type="date" id="date"> <button id="ateMeal1">I Ate This Meal</button>
+        <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
     </div>
 
     <div class="meal-card">
@@ -30,9 +30,9 @@
         <h3>Tuna Salad Sandwich on Whole Wheat Bread </h3>
         <p>Calories: 253 Kcal | Protein: 27g | Fat:20g </p>
         <p>Why this meal? High Calorie Lunch</p>
-        <input type="date" id="date"> <button id="planMeal2">I Want To Eat This Meal</button>
+        <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
         <br>
-        <input type="date" id="date"> <button id="ateMeal2">I Ate This Meal</button>
+        <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
     </div>
 </section>
 
@@ -54,18 +54,18 @@
                 <img src="images/AvocadoToastwithEgg.jpg" alt="Avocado Toast with Eggs">
                 <div class="meal-info">
                     <div class="meal-title">Avocado Toast with Eggs</div>
-                    <input type="date" id="date"> <button id="planMeal3">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal3">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/berry cottage cheese breakfast bowl.jpeg" alt="Berry Cottage Cheese Breakfast Bowl">
                 <div class="meal-info">
                     <div class="meal-title">Berry Cottage Cheese Breakfast Bowl</div>
-                    <input type="date" id="date"> <button id="planMeal4">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal4">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -80,18 +80,18 @@
                 <img src="images/grilled-chicken-salad-.jpg" alt="Grilled Chicken Salad">
                 <div class="meal-info">
                     <div class="meal-title">Grilled Chicken Salad</div>
-                    <input type="date" id="date"> <button id="planMeal5">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal5">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/Buffalo chicken rice bowls.jpeg" alt="Buffalo Chicken Rice Bowls">
                 <div class="meal-info">
                     <div class="meal-title">Buffalo Chicken Rice Bowls</div>
-                    <input type="date" id="date"> <button id="planMeal6">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal6">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -106,18 +106,18 @@
                 <img src="images/salmon-caesar-small-1.jpg" alt="Salmon Caesar Salad">
                 <div class="meal-info">
                     <div class="meal-title">Salmon Caesar Salad</div>
-                    <input type="date" id="date"> <button id="planMeal7">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal7">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/crock pot chicken tacos.jpeg" alt="Crock Pot Chicken Tacos">
                 <div class="meal-info">
                     <div class="meal-title">Crock Pot Chicken Tacos</div>
-                    <input type="date" id="date"> <button id="planMeal8">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal8">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -137,18 +137,18 @@
                 <img src="images/scrambled eggs with spinach and toast.jpeg" alt="Scrambled Eggs with Spinach">
                 <div class="meal-info">
                     <div class="meal-title">Scrambled Eggs with Spinach and Toast</div>
-                    <input type="date" id="date"> <button id="planMeal10">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal1">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal10">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/overnight oats.jpeg" alt="Overnight Oats">
                 <div class="meal-info">
                     <div class="meal-title">Overnight Oats with Berries and Nuts</div>
-                    <input type="date" id="date"> <button id="planMeal11">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal11">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -163,18 +163,18 @@
                 <img src="images/lentil soup.jpeg" alt="Lentil Soup">
                 <div class="meal-info">
                     <div class="meal-title">Lentil Soup with Whole Grain Bread</div>
-                    <input type="date" id="date"> <button id="planMeal12">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal12">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/grilled-chicken-salad-.jpg" alt="Grilled Chicken Salad">
                 <div class="meal-info">
                     <div class="meal-title">Grilled Chicken Salad</div>
-                    <input type="date" id="date"> <button id="planMeal13">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal13">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -189,18 +189,18 @@
                 <img src="images/baked salmon with veg.webp" alt="Baked Salmon">
                 <div class="meal-info">
                     <div class="meal-title">Baked Salmon with Roasted Vegetables</div>
-                    <input type="date" id="date"> <button id="planMeal14">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal14">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/chicken stir fry.jpeg" alt="Chicken Stir-Fry">
                 <div class="meal-info">
                     <div class="meal-title">Chicken Stir-Fry with Brown Rice</div>
-                    <input type="date" id="date"> <button id="planMeal15">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal15">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -221,18 +221,18 @@
                 <img src="images/yogurt and fruit parfaits.jpeg" alt="Yogurt Parfait">
                 <div class="meal-info">
                     <div class="meal-title">Yogurt and Fruit Parfaits</div>
-                    <input type="date" id="date"> <button id="planMeal16">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal16">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/Loaded Avocado.jpeg" alt="Avocado Toast">
                 <div class="meal-info">
                     <div class="meal-title">Loaded Avocado Toast</div>
-                    <input type="date" id="date"> <button id="planMeal17">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal17">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -247,18 +247,18 @@
                 <img src="images/veggie q.jpeg" alt="Veggie Quesadillas">
                 <div class="meal-info">
                     <div class="meal-title">Veggie Quesadillas</div>
-                    <input type="date" id="date"> <button id="planMeal18">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal18">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/italian pasta salad.jpeg" alt="Italian Pasta Salad">
                 <div class="meal-info">
                     <div class="meal-title">Italian Pasta Salad</div>
-                    <input type="date" id="date"> <button id="planMeal19">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal19">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -273,18 +273,18 @@
                 <img src="images/slow cooker.jpeg" alt="Beef and Broccoli">
                 <div class="meal-info">
                     <div class="meal-title">Slow Cooker Beef and Broccoli</div>
-                    <input type="date" id="date"> <button id="planMeal20">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal20">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/one pot.jpeg" alt="One Pot Chicken and Rice">
                 <div class="meal-info">
                     <div class="meal-title">One-Pot Chicken and Rice</div>
-                    <input type="date" id="date"> <button id="planMeal21">I Want To Eat This Meal</button>
+                    <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal21">I Ate This Meal</button>
+                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
