Simple Base for History

--- a/History.html
+++ b/History.html
@@ -17,8 +17,68 @@
         </section>
         <section>
             <h3>Meals The Past Week Were:</h3>
-            <p></p>
+            <!--Newest Date-->
+            <p id="oldDate1">Date Here</p>
+            <div id="oldDate1MealName">
+
+            </div>
+            <div id="oldDate1MealImage">
+
+            </div>
+            <!--Second Date-->
+            <p id="oldDate2">Date Here</p>
+            <div id="oldDate2MealName">
+
+            </div>
+            <div id="oldDate2MealImage">
+
+            </div>
+            <!--Third Date-->
+            <p id="oldDate3">Date Here</p>
+            <div id="oldDate3MealName">
+
+            </div>
+            <div id="oldDate3MealImage">
+
+            </div>
+            <!--4th Date-->
+            <p id="oldDate4">Date Here</p>
+            <div id="oldDate4MealName">
+
+            </div>
+            <div id="oldDate4MealImage">
+
+            </div>
+            <!--5th Date-->
+            <p id="oldDate5">Date Here</p>
+            <div id="oldDate5MealName">
+
+            </div>
+            <div id="oldDate5MealImage">
+
+            </div>
+            <!--6th Date-->
+            <p id="oldDate6">Date Here</p>
+            <div id="oldDate6MealName">
+
+            </div>
+            <div id="oldDate6MealImage">
+
+            </div>
+            <!--7th Date-->
+            <p id="oldDate7">Date Here</p>
+            <div id="oldDate7MealName">
+
+            </div>
+            <div id="oldDate7MealImage">
+
+            </div>
         </section>
+        <nav>
+            <ul>
+                <li><a href="index.html">Go Home</a></li>
+            </ul>
+        </nav>
     </main>
 </body>
 </html>
