History has default view, and simple entry for adding a meal(only name of meal and date)

--- a/History.html
+++ b/History.html
@@ -17,8 +17,10 @@
         </section>
         <section>
             <h3>Meals The Past Week Were:</h3>
+            <p id="showIfEmpty">There are currently no meals recorded, please record a meal.</p>
+            <input type="date" id="date"> <input type="text" id="mealName"> <button id="planMeal">I Ate This</button>
             <!--Newest Date-->
-            <p id="oldDate1">Date Here</p>
+            <p id="oldDate1"></p>
             <div id="oldDate1MealName">
 
             </div>
@@ -26,7 +28,7 @@
 
             </div>
             <!--Second Date-->
-            <p id="oldDate2">Date Here</p>
+            <p id="oldDate2"></p>
             <div id="oldDate2MealName">
 
             </div>
@@ -34,7 +36,7 @@
 
             </div>
             <!--Third Date-->
-            <p id="oldDate3">Date Here</p>
+            <p id="oldDate3"></p>
             <div id="oldDate3MealName">
 
             </div>
@@ -42,7 +44,7 @@
 
             </div>
             <!--4th Date-->
-            <p id="oldDate4">Date Here</p>
+            <p id="oldDate4"></p>
             <div id="oldDate4MealName">
 
             </div>
@@ -50,7 +52,7 @@
 
             </div>
             <!--5th Date-->
-            <p id="oldDate5">Date Here</p>
+            <p id="oldDate5"></p>
             <div id="oldDate5MealName">
 
             </div>
@@ -58,7 +60,7 @@
 
             </div>
             <!--6th Date-->
-            <p id="oldDate6">Date Here</p>
+            <p id="oldDate6"></p>
             <div id="oldDate6MealName">
 
             </div>
@@ -66,7 +68,7 @@
 
             </div>
             <!--7th Date-->
-            <p id="oldDate7">Date Here</p>
+            <p id="oldDate7"></p>
             <div id="oldDate7MealName">
 
             </div>
