typos, put names at bottm

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             </p> 
             <p>
-                Whether you are a weight- watcher, managing a chronic condition or trying to eat healthy on your own or with your family, NutriRep will give you tools you need to succeed. 
+                Whether you are a weight-watcher, managing a chronic condition or trying to eat healthy on your own or with your family, NutriRep will give you tools you need to succeed. 
 
             </p> 
         </section>
@@ -47,7 +47,8 @@
             <ul>
                 <li>Create custom meal plans</li>
                 <li>Track your progress</li>
-                <li>Receice daily reminders to stay on track</li>
+                <li>View previous meals</li>
+                <li>Receive daily reminders to stay on track</li>
             </ul>
         </section>
 
@@ -61,6 +62,7 @@
     </main>
    <footer>
     <p>&copy; 2025 NutriRep. All rights reserved</p>
+    <p>Anthony Murphy, Jodian Kennedy, Christopher Schleicher</p>
    </footer> 
 </body>
 </html>
