bugfix mealPlan is correctly added to users object at index i

--- a/User.html
+++ b/User.html
@@ -11,13 +11,28 @@
 
     <!--Profiles-->
        <div class="profile-type">
-        <h3>Select Your Profile:</h3>
-        <button type="button" data-profile="weight-watchers">Weight Watchers</button>
-        <button type="button" data-profile="family">Family Focused</button>
-        <button type="button" data-profile="chronic">Managing Chronic Conditions</button>
-        <button type="button" data-profile="low-vitamin">Low Vitamin</button>
-        <button type="button" data-profile="high-calorie">High Calorie</button>
-
+        <h3>Your Meals This Week:</h3><br>
+        <div class="day" id="sun">
+            <h4>Sunday</h4>
+        </div>
+        <div class="day" id="mon">
+            <h4>Monday</h4>
+        </div>
+        <div class="day" id="tue">
+            <h4>Tuesday</h4>
+        </div>
+        <div class="day" id="wed">
+            <h4>Wednesday</h4>
+        </div>
+        <div class="day" id="thu">
+            <h4>Thursday</h4>
+        </div>
+        <div class="day" id="fri">
+            <h4>Friday</h4>
+        </div>
+        <div class="day" id="sat">
+            <h4>Saturday</h4>
+        </div>
        </div>
     
 <section class="cta">
