working on dynamically creating elements on users page, mealPlan continues to not be passed between pages

--- a/User.html
+++ b/User.html
@@ -12,25 +12,25 @@
     <!--Profiles-->
        <div class="profile-type">
         <h3>Your Meals This Week:</h3><br>
-        <div class="day" id="sun">
+        <div class="day" id="0">
             <h4>Sunday</h4>
         </div>
-        <div class="day" id="mon">
+        <div class="day" id="1">
             <h4>Monday</h4>
         </div>
-        <div class="day" id="tue">
+        <div class="day" id="2">
             <h4>Tuesday</h4>
         </div>
-        <div class="day" id="wed">
+        <div class="day" id="3">
             <h4>Wednesday</h4>
         </div>
-        <div class="day" id="thu">
+        <div class="day" id="4">
             <h4>Thursday</h4>
         </div>
-        <div class="day" id="fri">
+        <div class="day" id="5">
             <h4>Friday</h4>
         </div>
-        <div class="day" id="sat">
+        <div class="day" id="6">
             <h4>Saturday</h4>
         </div>
        </div>
