--- a/User.html
+++ b/User.html
@@ -14,24 +14,66 @@
         <h3>Your Meals This Week:</h3><br>
         <div class="day" id="0">
             <h4>Sunday</h4>
+            <label for="calTotal">Todays Calories</label>
+            <input type="text" disabled id="calTotal0" value="0" width="10">
+            <label for="">Todays Protein</label>
+            <input type="text" disabled id="protTotal0" value="0" width="10">
+            <label for="fatTotal">Todays Fat</label>
+            <input type="text" disabled id="fatTotal0" value="0" width="10">
         </div>
         <div class="day" id="1">
             <h4>Monday</h4>
+            <label for="calTotal">Todays Calories</label>
+            <input type="text" disabled id="calTotal1" value="0" width="10">
+            <label for="">Todays Protein</label>
+            <input type="text" disabled id="protTotal1" value="0" width="10">
+            <label for="fatTotal">Todays Fat</label>
+            <input type="text" disabled id="fatTotal1" value="0" width="10">
         </div>
         <div class="day" id="2">
             <h4>Tuesday</h4>
+            <label for="calTotal">Todays Calories</label>
+            <input type="text" disabled id="calTotal2" value="0" width="10">
+            <label for="">Todays Protein</label>
+            <input type="text" disabled id="protTotal2" value="0" width="10">
+            <label for="fatTotal">Todays Fat</label>
+            <input type="text" disabled id="fatTotal2" value="0" width="10">
         </div>
         <div class="day" id="3">
             <h4>Wednesday</h4>
+            <label for="calTotal">Todays Calories</label>
+            <input type="text" disabled id="calTotal3" value="0" width="10">
+            <label for="">Todays Protein</label>
+            <input type="text" disabled id="protTotal3" value="0" width="10">
+            <label for="fatTotal">Todays Fat</label>
+            <input type="text" disabled id="fatTotal3" value="0" width="10">
         </div>
         <div class="day" id="4">
             <h4>Thursday</h4>
+            <label for="calTotal">Todays Calories</label>
+            <input type="text" disabled id="calTotal4" value="0" width="10">
+            <label for="">Todays Protein</label>
+            <input type="text" disabled id="protTotal4" value="0" width="10">
+            <label for="fatTotal">Todays Fat</label>
+            <input type="text" disabled id="fatTotal4" value="0" width="10">
         </div>
         <div class="day" id="5">
             <h4>Friday</h4>
+            <label for="calTotal">Todays Calories</label>
+            <input type="text" disabled id="calTotal5" value="0" width="10">
+            <label for="">Todays Protein</label>
+            <input type="text" disabled id="protTotal5" value="0" width="10">
+            <label for="fatTotal">Todays Fat</label>
+            <input type="text" disabled id="fatTotal5" value="0" width="10">
         </div>
         <div class="day" id="6">
             <h4>Saturday</h4>
+            <label for="calTotal">Todays Calories</label>
+            <input type="text" disabled id="calTotal6" value="0" width="10">
+            <label for="">Todays Protein</label>
+            <input type="text" disabled id="protTotal6" value="0" width="10">
+            <label for="fatTotal">Todays Fat</label>
+            <input type="text" disabled id="fatTotal6" value="0" width="10">
         </div>
        </div>
     
