Bug fixing, I hate dates, further optimizing

--- a/MealRec.html
+++ b/MealRec.html
@@ -22,7 +22,7 @@
         <p>Why this meal? You're low on Vitamin D.</p>
         <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
         <br>
-        <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+        <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
     </div>
 
     <div class="meal-card">
@@ -32,7 +32,7 @@
         <p>Why this meal? High Calorie Lunch</p>
         <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
         <br>
-        <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+        <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
     </div>
 </section>
 
@@ -56,7 +56,7 @@
                     <div class="meal-title">Avocado Toast with Eggs</div>
                     <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
@@ -65,7 +65,7 @@
                     <div class="meal-title">Berry Cottage Cheese Breakfast Bowl</div>
                     <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
                     <div class="meal-title">Grilled Chicken Salad</div>
                     <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
@@ -91,7 +91,7 @@
                     <div class="meal-title">Buffalo Chicken Rice Bowls</div>
                     <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -108,7 +108,7 @@
                     <div class="meal-title">Salmon Caesar Salad</div>
                     <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
@@ -117,7 +117,7 @@
                     <div class="meal-title">Crock Pot Chicken Tacos</div>
                     <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -139,7 +139,7 @@
                     <div class="meal-title">Scrambled Eggs with Spinach and Toast</div>
                     <input type="date" id="date"> <button id="planMeal1">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
@@ -148,7 +148,7 @@
                     <div class="meal-title">Overnight Oats with Berries and Nuts</div>
                     <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -165,7 +165,7 @@
                     <div class="meal-title">Lentil Soup with Whole Grain Bread</div>
                     <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
@@ -174,7 +174,7 @@
                     <div class="meal-title">Grilled Chicken Salad</div>
                     <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -191,7 +191,7 @@
                     <div class="meal-title">Baked Salmon with Roasted Vegetables</div>
                     <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
@@ -200,7 +200,7 @@
                     <div class="meal-title">Chicken Stir-Fry with Brown Rice</div>
                     <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -223,7 +223,7 @@
                     <div class="meal-title">Yogurt and Fruit Parfaits</div>
                     <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
@@ -232,7 +232,7 @@
                     <div class="meal-title">Loaded Avocado Toast</div>
                     <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -249,7 +249,7 @@
                     <div class="meal-title">Veggie Quesadillas</div>
                     <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
@@ -258,7 +258,7 @@
                     <div class="meal-title">Italian Pasta Salad</div>
                     <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -275,7 +275,7 @@
                     <div class="meal-title">Slow Cooker Beef and Broccoli</div>
                     <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
@@ -284,7 +284,7 @@
                     <div class="meal-title">One-Pot Chicken and Rice</div>
                     <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
                     <br>
-                    <input type="date" id="date"> <button id="ateMeal">I Ate This Meal</button>
+                    <input type="date" id="date2"> <button id="ateMeal">I Ate This Meal</button>
                 </div>
             </div>
         </div>
